-VentanaOfertas -Que salga una foto del producto seleccionado en el carrito

--- a/.classpath
+++ b/.classpath
@@ -12,5 +12,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/34688/Downloads/jcalendar-1.4.jar.zip"/>
+	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
