--- a/.classpath
+++ b/.classpath
@@ -6,11 +6,7 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/34688/Downloads/sqlite-jdbc-3.36.0.3 (1).jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry kind="lib" path="C:/Users/Jon/Downloads/sqlite-jdbc-3.36.0.3 (1).jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
