--- a/.classpath
+++ b/.classpath
@@ -1,17 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="tiendaDeRopa/src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-<<<<<<< HEAD
-	<classpathentry kind="lib" path="C:/Users/Jon/Downloads/sqlite-jdbc-3.36.0.3 (1).jar"/>
-=======
-	<classpathentry kind="lib" path="C:/Users/34688/Downloads/jcalendar-1.4.jar.zip"/>
-	<classpathentry kind="lib" path="jcalendar-1.4.jar"/>
->>>>>>> branch 'master' of https://github.com/JaimeRevilla/tiendaDeRopa
+	<classpathentry kind="src" path=""/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
