--- a/.classpath
+++ b/.classpath
@@ -1,5 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path=""/>
+	<classpathentry kind="lib" path="C:/Users/34688/Downloads/sqlite-jdbc-3.36.0.3 (2).jar"/>
+	<classpathentry kind="lib" path="C:/Users/34688/Downloads/jcalendar-1.4.jar.zip"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
